2017-08-03  0.0.1
            Initial commit. First, ugly version

2017-08-04  0.1.2
            Refactored code to improve readability, added options
            --abortonerror
            --exceldateformat
            --silent
            Added datatypes integer, currency
            Prints version info on Usage or with --version

2017-08-10  0.1.3
            - removed option --usetitles, added --noheader
            - added datatype "formula"
            - option --colsep now handles \t for tab correctly
            - lots of bug fixes

2017-12-21 0.2
            Added option --encoding

2018-06-20 0.3
            Added better version of ParseFloat to allow scientific number notation

2018-06-21 0.3.1
            Added --filemask option to allow bulk processing

2018-06-21 0.3.2
            Bugfix that caused -outfile to be ignored in 0.3.1
            new option for -fontsize and -fontname
            new option for -headerlines

2018-06-29 0.3.3
            Bugfix for the -dateformat parameter (now works as intended)

2018-11-23 0.4.0
            Added option --append
            Added option --headerline
            Added updating file with more than one sheet