@@ -17,108 +17,7 @@ import (
 	"unicode/utf8"
 
 	"github.com/tealeg/xlsx"
-	"golang.org/x/text/encoding/charmap"
 )
-
-var (
-	versionInfo          string = "0.4.0 (2081-11-23)"
-	parmCols             string
-	parmRows             string
-	parmSheet            string
-	parmInFile           string
-	parmOutFile          string
-	parmOutDir           string
-	parmFileMask         string
-	parmEncoding         string
-	parmHeaderLines      int
-	parmFontSize         int
-	parmFontName         string
-	parmColSep           rune
-	parmDateFormat       string
-	parmExcelDateFormat  string
-	parmNoHeader         bool
-	parmSilent           bool
-	parmHelp             bool
-	parmAbortOnError     bool
-	parmShowVersion      bool
-	parmAutoFormula      bool
-	parmIgnoreEmpty      bool
-	parmOverwrite        bool
-	rowRangeParsed       map[int]string
-	colRangeParsed       map[int]string
-	workBook             *xlsx.File
-	workSheet            *xlsx.Sheet
-	rightAligned         *xlsx.Style
-	buildTimestamp       string
-	tmpStr               string
-	parmHeaderline       []string
-	parmAppendToSheet    bool
-	parmOverwriteOutFile bool
-	parmListEncoders     bool
-	parmStartRow         int
-)
-
-// Possible bailouts
-const (
-	SUCCESS             = 0
-	SHOW_USAGE          = 1
-	INVALID_RANGE       = 2
-	INVALID_COLSEP      = 3
-	INPUTFILE_NOT_FOUND = 4
-	INPUTFILE_EMPTY     = 5
-	OPEN_CREATE_ERROR   = 6
-	READ_ERROR          = 7
-	WRITE_ERROR         = 8
-	ROW_WRITE_ERROR     = 9
-	NO_OVERWRITE        = 10
-	OUTPUTDIR_NOT_FOUND = 11
-	EXCEL_SAVE_ERROR    = 12
-	INVALID_ARGUMENTS   = 13
-)
-
-var encoders = map[string]*charmap.Charmap{
-	"CODEPAGE037":       charmap.CodePage037,
-	"CODEPAGE437":       charmap.CodePage437,
-	"CODEPAGE850":       charmap.CodePage850,
-	"CODEPAGE852":       charmap.CodePage852,
-	"CODEPAGE855":       charmap.CodePage855,
-	"CODEPAGE858":       charmap.CodePage858,
-	"CODEPAGE860":       charmap.CodePage860,
-	"CODEPAGE862":       charmap.CodePage862,
-	"CODEPAGE863":       charmap.CodePage863,
-	"CODEPAGE865":       charmap.CodePage865,
-	"CODEPAGE866":       charmap.CodePage866,
-	"CODEPAGE1047":      charmap.CodePage1047,
-	"CODEPAGE1140":      charmap.CodePage1140,
-	"ISO8859_1":         charmap.ISO8859_1,
-	"ISO8859_2":         charmap.ISO8859_2,
-	"ISO8859_3":         charmap.ISO8859_3,
-	"ISO8859_4":         charmap.ISO8859_4,
-	"ISO8859_5":         charmap.ISO8859_5,
-	"ISO8859_6":         charmap.ISO8859_6,
-	"ISO8859_7":         charmap.ISO8859_7,
-	"ISO8859_8":         charmap.ISO8859_8,
-	"ISO8859_9":         charmap.ISO8859_9,
-	"ISO8859_10":        charmap.ISO8859_10,
-	"ISO8859_13":        charmap.ISO8859_13,
-	"ISO8859_14":        charmap.ISO8859_14,
-	"ISO8859_15":        charmap.ISO8859_15,
-	"ISO8859_16":        charmap.ISO8859_16,
-	"KOI8R":             charmap.KOI8R,
-	"KOI8U":             charmap.KOI8U,
-	"MACINTOSH":         charmap.Macintosh,
-	"MACINTOSHCYRILLIC": charmap.MacintoshCyrillic,
-	"WINDOWS874":        charmap.Windows874,
-	"WINDOWS1250":       charmap.Windows1250,
-	"WINDOWS1251":       charmap.Windows1251,
-	"WINDOWS1252":       charmap.Windows1252,
-	"WINDOWS1253":       charmap.Windows1253,
-	"WINDOWS1254":       charmap.Windows1254,
-	"WINDOWS1255":       charmap.Windows1255,
-	"WINDOWS1256":       charmap.Windows1256,
-	"WINDOWS1257":       charmap.Windows1257,
-	"WINDOWS1258":       charmap.Windows1258,
-}
 
 // listEncoders is a helper function to display the list
 // of supported encodings on standard output
@@ -233,7 +132,7 @@ func parseCommandLine() {
 	flag.StringVar(&tmpStr, "colsep", "|", "column separator (default '|') ")
 	flag.StringVar(&parmEncoding, "encoding", "utf-8", "character encoding")
 	flag.StringVar(&parmFontName, "fontname", "Arial", "set the font name to use")
-	flag.StringVar(&headerString, "headerline", "", "comma-separated list of header labels (enclose in quotes to be safe)")
+	flag.StringVar(&headerString, "headerlabels", "", "comma-separated list of header labels (enclose in quotes to be safe)")
 	flag.IntVar(&parmFontSize, "fontsize", 12, "set the default font size to use")
 	flag.IntVar(&parmHeaderLines, "headerlines", 1, "set the number of header lines (use 0 for no header)")
 	flag.BoolVar(&parmNoHeader, "noheader", false, "DEPRECATED (use headerlines) no header, only data lines")
@@ -274,11 +173,11 @@ func parseCommandLine() {
 	parmDateFormat = r.Replace(parmDateFormat)
 
 	// do we have user defined header labels?
-	parmHeaderline = []string{}
+	parmHeaderLabels = []string{}
 	if headerString != "" {
-		parmHeaderline = strings.Split(headerString, ",")
-		for i := range parmHeaderline {
-			parmHeaderline[i] = strings.TrimSpace(parmHeaderline[i])
+		parmHeaderLabels = strings.Split(headerString, ",")
+		for i := range parmHeaderLabels {
+			parmHeaderLabels[i] = strings.TrimSpace(parmHeaderLabels[i])
 		}
 	}
 
@@ -457,8 +356,8 @@ func processDataColumns(excelRow *xlsx.Row, rownum int, csvLine []string) {
 			isHeader := (parmHeaderLines > 0) || !parmNoHeader
 			if isHeader && (rownum < parmHeaderLines) {
 				// special case for the title row
-				if len(parmHeaderline) > 0 && len(parmHeaderline) > colnum {
-					cell.SetString(parmHeaderline[colnum])
+				if len(parmHeaderLabels) > 0 && len(parmHeaderLabels) > colnum {
+					cell.SetString(parmHeaderLabels[colnum])
 				} else {
 					cell.SetString(csvLine[colnum])
 				}
@@ -540,7 +439,6 @@ func getWorkSheet(sheetName string, workBook *xlsx.File, appendSheet bool) *xlsx
 
 // convertFile does the conversion from CSV to Excel .xslx
 func convertFile(infile, outfile string) bool {
-
 	if _, err := os.Stat(outfile); err == nil {
 		if !parmOverwrite {
 			fmt.Println(fmt.Sprintf("Output file %s exists, skipping (use --overwrite?)", outfile))
@@ -550,7 +448,6 @@ func convertFile(infile, outfile string) bool {
 
 	rows, err := loadInputFile(infile)
 	if err != nil {
-		// erorr occured, skip this file
 		fmt.Println(err)
 		return false
 	}
@@ -560,14 +457,11 @@ func convertFile(infile, outfile string) bool {
 	xlsx.SetDefaultFont(parmFontSize, parmFontName)
 	rightAligned = &xlsx.Style{}
 	rightAligned.Alignment = xlsx.Alignment{Horizontal: "right"}
-
 	workBook, err = openOrCreateFile(outfile)
 	if err != nil {
-		// erorr occured, skip this file
 		fmt.Println(err)
 		return false
 	}
-
 	workSheet = getWorkSheet(parmSheet, workBook, parmAppendToSheet)
 
 	// loop thru line and column ranges and process data cells
@@ -588,9 +482,7 @@ func convertFile(infile, outfile string) bool {
 	return true
 }
 
-// the main entry function
 func main() {
-	// preflight stuff
 	var fileList []string
 	parseCommandLine()
 
